get user name input from index.html and store in user object

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <header>
-
+        <h1>splash page</h1>
     </header>
     <main>
-
+        <form id="user-profile">
+            Name: <input type="text" name="name" required>
+            <button>SUBMIT</button>
+        </form>
     </main>
     <footer>
         
     </footer>    
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
