--- a/pages/map.html
+++ b/pages/map.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <header>
-
+        <h1>MAPPER-OO</h1>
     </header>
     <main>
-
+        <section id="map-area">
+            <a href="">clue 1</a>
+        </section>
     </main>
     <footer>
         
     </footer>
+    <script type="module" src="../src/map.js"></script>
 </body>
 </html>
