create link elements from locations array, put in locations url as search param

--- a/pages/location.html
+++ b/pages/location.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <h1 id="location">
 
+        </h1>
     </header>
     <main>
 
@@ -16,6 +18,6 @@
     <footer>
         
     </footer>
-    
+    <script type="module" src="../src/location.js"></script>
 </body>
 </html>
