--- a/pages/map.html
+++ b/pages/map.html
@@ -9,10 +9,13 @@
 <body>
     <header>
         <h1>MAPPER-OO</h1>
+        <a href="../index.html">Home</a>
     </header>
     <main>
         <section id="map-area">
-            <a href="">clue 1</a>
+            <ul id="location-links">
+
+            </ul>
         </section>
     </main>
     <footer>
