--- a/pages/location.html
+++ b/pages/location.html
@@ -14,6 +14,13 @@
     </header>
     <main>
 
+        <section>
+            <p id="clue"></p>
+        </section>
+        <section>
+            <a href="../pages/map.html">MAP</a>
+        </section>
+
     </main>
     <footer>
         
