finish end to end slice

--- a/pages/end.html
+++ b/pages/end.html
@@ -10,5 +10,12 @@
     <header>
         <h1>End screen</h1>
     </header>
+    <main>
+        <section id="results">
+
+        </section>
+        <a href="../index.html">Play Again</a>
+    </main>
+    <script type="module" src="../src/end.js"></script>
 </body>
 </html>
