get diceGame results displaying on location page when diceGame function runs

--- a/pages/location.html
+++ b/pages/location.html
@@ -8,11 +8,37 @@
 </head>
 <body>
     <header>
-        <h1 id="location">
-
-        </h1>
+        <h1 id="location"></h1>
     </header>
     <main>
+        <section id="game">
+
+            <button id="play">PLAY</button>
+            <section>
+                <section id="player-results">
+                    <p>Your Dice Rolls: 
+                        <span id="player-roll-1"></span>, 
+                        <span id="player-roll-2"></span>
+                    </p>
+                    <p>Total: 
+                        <span id="player-total"></span>
+                    </p>
+                </section>
+                <section id="opponent-results">
+                    <p>Opponent Dice Rolls: 
+                        <span id="opponent-roll-1"></span>, 
+                        <span id="opponent-roll-2"></span>
+                    </p>
+                    <p>Total: 
+                        <span id="opponent-total"></span>
+                    </p>
+                </section>
+                <section>
+                    <p id="result-message"></p>
+                </section>
+
+            </section>
+        </section>
 
         <section>
             <p id="clue"></p>
