--- a/pages/location.html
+++ b/pages/location.html
@@ -12,36 +12,8 @@
     </header>
     <main>
         <section id="game">
-
-            <button id="play">PLAY</button>
-            <section>
-                <section id="player-results">
-                    <p>Your Dice Rolls: 
-                        <span id="player-roll-1"></span>, 
-                        <span id="player-roll-2"></span>
-                    </p>
-                    <p>Total: 
-                        <span id="player-total"></span>
-                    </p>
-                </section>
-                <section id="opponent-results">
-                    <p>Opponent Dice Rolls: 
-                        <span id="opponent-roll-1"></span>, 
-                        <span id="opponent-roll-2"></span>
-                    </p>
-                    <p>Total: 
-                        <span id="opponent-total"></span>
-                    </p>
-                </section>
-                <section>
-                    <p id="result-message"></p>
-                </section>
-
-            </section>
         </section>
-
-        <section>
-            <p id="clue"></p>
+        <section id="game-outcome">
         </section>
         <section>
             <a href="../pages/map.html">MAP</a>
