add game instructions to each game canvas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="user-area" hidden>
             <form id="user-profile">
                 Name: <input type="text" name="name" required>
-                <button>SUBMIT</button>
+                <button>Start</button>
             </form>
         </section>
     </main>
