--- a/pages/location.html
+++ b/pages/location.html
@@ -16,7 +16,7 @@
         <section id="game-outcome">
         </section>
         <section>
-            <a href="../pages/map.html" id="map-button">MAP</a>
+            <a href="../pages/map.html" id="map-button">Return to Map</a>
         </section>
 
     </main>
