--- a/pages/map.html
+++ b/pages/map.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>MAPPER-OO</h1>
+        <h1>Our Fair City</h1>
+        <p>Pick a location based on your latest clue.</p>
         <a href="../index.html">Home</a>
     </header>
     <main>
