user status on map working

--- a/pages/map.html
+++ b/pages/map.html
@@ -13,6 +13,14 @@
         <a href="../index.html">Home</a>
     </header>
     <main>
+        <section id="status-bar">
+            <p id="status-bar-title">Status Bar</p>
+            <img id="avatar-image" src="" alt="avatar image">
+            <p id="username">Name: </p>
+            <p id="days-left">Days Left: </p>
+            <p id="clues-title">Clues: </p>
+            <ul id="clues-list"></ul>
+        </section>
         <section id="map-area">
             <ul id="location-links">
 
