done prelim refractoring, started styling

--- a/pages/boss.html
+++ b/pages/boss.html
@@ -7,11 +7,6 @@
     <title>Boss</title>
 </head>
 <body>
-
-    <header>
-        <h1></h1>
-    </header>
-
     <main>
 
         <section>
@@ -19,15 +14,19 @@
                 <img src="../assets/Velma_Dinkley.png" id="villain" alt="velma is a villain">
             </div>
         </section>
+
         <section id="pop-up">
             <p id="narration">Narration: LOREM IPSUM</p>
             <p id="instructions">Instructions: LOREM IPSUM</p>
             <button id="start-button">Start Timer</button>
         </section>
+
         <section>
-            <p id="win"></p>
+            <p id="win" hidden></p>
         </section>
+
     </main>
-<script type="module" src="../src/boss.js">  </script>
+
+<script type="module" src="../src/boss.js"></script>
 </body>
 </html>
