--- a/pages/end.html
+++ b/pages/end.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../css/end.css">
+    <title>Conclusion</title>
 </head>
 <body>
+
     <header>
         <h1>End screen</h1>
     </header>
-    <main>
-        <section id="results">
 
-        </section>
+    <main>
+        <section id="results"></section>
+
         <a href="../index.html">Play Again</a>
+
     </main>
+    
     <script type="module" src="../src/end.js"></script>
 </body>
 </html>
