--- a/pages/location.html
+++ b/pages/location.html
@@ -3,26 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="../css/location.css">
     <title>Location</title>
 </head>
 <body>
     <header>
-        <h1 id="location"></h1>
+
+        <a href="map.html">Map</a>
+        <a href="credits.html">Credits</a>
+
     </header>
     <main>
-        <section id="game">
-        </section>
-        <section id="game-outcome">
-        </section>
+
+        <h1 id="location"></h1>
+
+        <section id="game"></section>
+
+        <section id="game-outcome"></section>
+
         <section>
             <a href="../pages/map.html" id="map-button">Return to Map</a>
         </section>
 
+        <section id="status-bar">
+            <p id="status-bar-title">Status Bar</p>
+            <img id="avatar-image" src="" alt="avatar image">
+            <p id="username">Name: </p>
+            <p id="days-left">Days Left: </p>
+            <p id="clues-title">Clues: </p>
+            <ul id="clues-list"></ul>
+        </section>
+
     </main>
-    <footer>
-        
-    </footer>
+
     <script type="module" src="../src/location.js"></script>
 </body>
 </html>
