--- a/index.html
+++ b/index.html
@@ -3,32 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Detective Game</title>
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <title>Before The Week Ends</title>
 </head>
 <body>
-    <header>
-    </header>
+    <video autoplay muted loop id="index-video">
+        <source src="assets/video/background-video-home-FINAL.mp4" type="video/mp4">
+    </video>
     <main>
         <section id="title">
-            <h1>Before the Week Ends</h1>
+            <img src="./assets/img/noir-title-FINAL.png" alt="Before the Week Ends title card">
             <p>An interactive whodunnit.</p>
             <button id="start-story">Begin Story</button>
         </section>
+
         <section id="intro" hidden>
-            <p>You are a detective. You discover a dead body in the allery behind your office. A note is pinned to the body. It reads, "You have 7 days to rescue the kidnapped child of this murder victim." You notice the note is written on a cocktail napkin from a nearby bar - your first clue.</p>
-            <button id="enter-name">Continue</button>
-        </section>
-        <section id="user-area" hidden>
+            <p>It was just another rainy day in our fair city and just another dead body in your alleyway. You’re a private detective. Well, at least it says so on the speckled glass window of your office door. You got a cozy place downtown near some fancy bookstore.</p> 
+            <p>Anyway, the dead body. Looks like the sack of bones was tossed around real nice. And what’s more, there’s a napkin pinned to the body - cute. Scrawled on it is a message written in script a 4th grader would be ashamed of: “You have 7 days to find my daughter. No cops or she ends up in the river.” Conveniently, the napkin has an inscription: “Joe’s Bar”. Your first clue...</p>
             <form id="user-profile">
                 Name: <input type="text" name="name" required>
                 <button>Start</button>
             </form>
         </section>
-    </main>
-    <footer>
         
-    </footer>    
+    </main>
+
     <script type="module" src="./src/index.js"></script>
 </body>
 </html>
