location page tall images are working

--- a/pages/location.html
+++ b/pages/location.html
@@ -19,7 +19,8 @@
         <div id="right-bottom">
 
             <div id="right-bottom-left">
-                <img src="" alt="barberShopimg">
+                <!-- append image here -->
+                <!-- <img src="" id="tall-image" alt="barberShopimg"> -->
             </div>
 
             <div id="right-bottom-right">
