--- a/pages/map.html
+++ b/pages/map.html
@@ -27,11 +27,13 @@
         <div id="map-area">
 
             <div id="prompt">
-                <p>Choose a</p> 
-                <p>location</p> 
-                <p>based on</p>
-                <p>your most</p> 
-                <p>recent clue.</p>
+                <p>
+                    Choose a location based on your most recent clue. 
+                </p>
+                <br>
+                <p>
+                    A wrong guess will cost you a day.
+                </p>
             </div>
 
             <div id="map-container">
