--- a/pages/boss.html
+++ b/pages/boss.html
@@ -11,7 +11,7 @@
 
         <section>
             <div id="range">
-                <img src="../assets/Velma_Dinkley.png" id="villain" alt="velma is a villain">
+                <img src="../assets/img/avatars/villain.png" id="villain" alt="velma is a villain">
             </div>
         </section>
 
