--- a/pages/location.html
+++ b/pages/location.html
@@ -33,11 +33,10 @@
                 <div id="right-bottom-right-bottom">
                         <div id="game-left">
                             <div id="prompt"></div>
-                        </div>
-                        <div id="game-right">
                             <section id="game"></section>
                             <section id="game-outcome"></section>
                         </div>
+                        <div id="game-right"></div>
                 </div>
             </div>
 
