--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button id="start-story">Begin Story</button>
         </section>
 
-        <div id="intro-container">
-            <section id="intro" hidden>
+        <div id="intro-container" hidden>
+            <section id="intro">
                 <p>It was just another rainy day in our fair city and just another dead body in your alleyway. You’re a private detective. Well, at least it says so on the speckled glass window of your office door. You got a cozy place downtown near some fancy bookstore.</p> 
                 <p>Anyway, the dead body. Looks like the sack of bones was tossed around real nice. And what’s more, there’s a napkin pinned to the body - cute. Scrawled on it is a message written in script a 4th grader would be ashamed of: “You have 7 days to find my daughter. No cops or she ends up in the river.” Conveniently, the napkin has an inscription: “Joe’s Bar”. Your first clue...</p>
                 <form id="user-profile">
