game button hides n shows to map button

--- a/pages/location.html
+++ b/pages/location.html
@@ -47,7 +47,7 @@
     
     <div id="left">
         <div id="avatar-image-container">
-            <img src="../assets/img/detective-1-ver2.png" alt="avatar-image">
+            <img src="" id="avatar-image" alt="avatar-image">
         </div>
         <div id="status-bar-container">
             <div id="user-info">
