--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
                 <p>It was just another rainy day in our fair city and just another dead body in your alleyway. You’re a private detective. Well, at least it says so on the speckled glass window of your office door. You got a cozy place downtown near some fancy bookstore.</p> 
                 <p>Anyway, the dead body. Looks like the sack of bones was tossed around real nice. And what’s more, there’s a napkin pinned to the body - cute. Scrawled on it is a message written in script a 4th grader would be ashamed of: “You have 7 days to find my daughter. No cops or she ends up in the river.” Conveniently, the napkin has an inscription: “Joe’s Bar”. Your first clue...</p>
                 <form id="user-profile">
-                    Name: <input type="text" name="name" required>
+                    Name: 
+                    <input type="text" name="name" required>
+                    Choose your detective:
+                    <label>
+                        <input type="radio" name="avatar" value="sloan" required>
+                        <img src="./assets/img/avatars/detective-avatar-1.png" alt="sloan">
+                    </label>
+                    <label>
+                        <input type="radio" name="avatar" value="riley" required>
+                        <img src="./assets/img/avatars/detective-avatar-2.png" alt="riley">
+                    </label>
                     <button>Start</button>
                 </form>
             </section>
