set up credits html and css

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/credits.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Notable|Archivo+Black" rel="stylesheet">
+
     <title>End Credits</title>
 </head>
 <body>
     <header>
 
+        <a href="../index.html">Play Again</a>
+
     </header>
     <main>
-
+        <section class="scroll-up">
+            <p><img src="../assets/img/noir-title-FINAL.png">
+            <br><span id="cursive">Starring:</span>
+            <br><br>Parker Helland as...<br>   Detective Pikachu
+            <br><br>Jared Myhrberg as...<br>   Sergeant McGriff
+            <br><br>Chris Piccaro as...<br>   Wise-Guy Eddie 
+            <br><br>and Ben Parisot as...<br>   Lady Fatale
+            <br><br><br>Filmed on location in beautiful
+            <br>Alchemy Code Labs.
+            <br><br><br>Using JavaScript, CSS, and HTML.</p>
     </main>
-    <footer>
-        
-    </footer>
-    
 </body>
 </html>
