style main splash page

--- a/pages/end.html
+++ b/pages/end.html
@@ -21,6 +21,8 @@
                 <section id="results"></section>
         
                 <a href="../index.html">Play Again</a>
+                <a href="credits.html">View Credits</a>
+
         
             </main>
         </div>
