finish style home page

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
                     Choose your detective:
                     <label>
                         <input type="radio" name="avatar" value="sloan" required>
-                        <img src="./assets/img/avatars/detective-avatar-1.png" alt="sloan">
+                        <img src="./assets/img/avatars/detective-avatar-1.png" alt="detective sloan icon" style="vertical-align: middle">
                     </label>
                     <label>
                         <input type="radio" name="avatar" value="riley" required>
-                        <img src="./assets/img/avatars/detective-avatar-2.png" alt="riley">
+                        <img src="./assets/img/avatars/detective-avatar-2.png" alt="detective riley icon" style="vertical-align: middle">
                     </label>
+                    <br>
                     <button>Start</button>
                 </form>
             </section>
