Working soundtrack and mute button

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -26,5 +26,6 @@
             <br>Alchemy Code Labs.
             <br><br><br>Using JavaScript, CSS, and HTML.</p>
     </main>
+    <script type="module" src="../src/credits.js"></script>
 </body>
 </html>
