--- a/pages/map.html
+++ b/pages/map.html
@@ -17,6 +17,7 @@
         </video>
 
         <div id="nav-bar">
+            <img id="speaker-icon" class="icon" src="../assets/img/icons/mute.png" alt="mute button">
             <a href="map.html">Map</a>
             <a href="credits.html">Credits</a>
         </div>
