--- a/pages/location.html
+++ b/pages/location.html
@@ -12,6 +12,7 @@
 
         <div id="right-top">
             <div id="nav-bar">
+                <img id="speaker-icon" class="icon" src="../assets/img/icons/mute.png" alt="mute button">
                 <a href="map.html">Map</a>
                 <a href="credits.html">Credits</a>
             </div>
