css grid for location page working better

--- a/pages/location.html
+++ b/pages/location.html
@@ -20,16 +20,12 @@
 
         <div id="right-bottom">
 
-            <div id="right-bottom-left">
-                <!-- append image here -->
-                <!-- <img src="" id="tall-image" alt="barberShopimg"> -->
-            </div>
+            <div id="right-bottom-left"></div>
 
             <div id="right-bottom-right">
                 <div id="right-bottom-right-top">
                     <div id="location-title"></div>
                     <div id="description"></div>
-                    <div id="instructions"></div>
                 </div>
                 
                 <div id="right-bottom-right-bottom">
