--- a/pages/end.html
+++ b/pages/end.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/end.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Notable|Archivo+Black" rel="stylesheet">
     <title>Conclusion</title>
 </head>
 <body>
@@ -12,6 +13,7 @@
         </div>
         <div id="right">
             <main>
+                <h3>The End ... ?</h3>
                 <section id="results"></section>
         
                 <button>
