removed comments and consol logs from all files, and extra assets

--- a/pages/end.html
+++ b/pages/end.html
@@ -8,9 +8,8 @@
     <title>Conclusion</title>
 </head>
 <body>
-        <div id="left">
-            <!-- <img src="../assets/img/locations/end-1.jpg" alt="Conclusion Image"> -->
-        </div>
+        <div id="left"></div>
+        
         <div id="right">
             <main>
                 <h3>The End ... ?</h3>
